# oso1

dapcs-oso-framework/: Makefile  pyproject.toml  requirements.txt
dapcs-oso-framework/src/oso/framework/auth/: common.py  extension.py
dapcs-oso-framework/src/oso/framework/config/models/: app.py
dapcs-oso-framework/src/oso/framework/core/: logging.py
